# miruku

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  miruku-watch.service  miruku.service
front/: package-lock.json  package.json
front/src/: api.ts
front/src/pages/: index.tsx
migrations/: 20220120134057_create_metas_table.down.sql  20220120134057_create_metas_table.up.sql
src/: main.rs
src/media/: common.rs  media.rs  meta.rs  mod.rs  thumb.rs
src/server/: mod.rs
src/server/handler/: media.rs  mod.rs
src/thumbs/: mod.rs
