[package]
name = "miruku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive"] }
serde = "1.0.133"
tokio = { version = "1.15.0", features = ["full"] }
image = "0.23.14"
regex = "1"
once_cell = "1.9.0"
rayon = "1.5.1"
